clean up indenation, classes, and IDs. It will add additional css and fix spacing.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,25 @@
-h1 {text-align: center;}
-p {text-align: center; padding: 1px; padding-left: 1px; padding-right: 1px;   background-color: darkgrey;}
-.list-group {margin-left: auto; margin-right: auto; width: 85%; te}
-h2 {text-align: center;}
-p {font-size: 37px;}
-li {background-color: black}
-li {padding-left: 10px; }
-.img-fluid{max-width: 100%; height: auto;}
+h1 {
+  text-align: center;
+}
+p {
+  text-align: center; padding: 1px; padding-left: 1px; padding-right: 1px; background-color: orchid; font-size: 37px;
+}
+.list-group {
+  margin-left: auto; margin-right: auto; width: 85%; te
+}
+h2 {
+
+  text-align: center;
+}
+li {
+  background-color: black; padding-left: 10px;
+}
+.img-fluid {
+  display: block; max-width: 50%; height: 500px; margin-right: auto; float: none; margin-left: auto;
+}
+.zulu {
+  color: black; padding: 50px;
+}
+.bravo {
+  text-align: center; padding: 50px; color: orchid
+}
